Update the latest blog articles from the website(2014-09-18).

--- a/blog/2014-09-14-chengdu.markdown
+++ b/blog/2014-09-14-chengdu.markdown
@@ -20,7 +20,7 @@
 
 也许沉浸在美女的围绕下，是去除心中的猥琐，最有效的手段吧。在缺乏美女的地方待太久的男人，或多或少有些猥琐的。看到美女，心里想的就是各种龌龊的事情，想着如何依靠自己的权势或者金钱据为己有。少数对美女似乎无动于衷的人，是因为他们知道竞争者太多，所以直接放弃了。到过美女多的地方的人，想的是如何彬彬有礼的对待她们，如何呵护好她们，就像对待花儿一样，不可以扑上去采摘的。美女的美，应该是大家欣赏的。你至少应该拥有跟这种美匹配的相貌或者心灵，才应该跟她们在一起。而且应该随时记住，她们是不属于你的，她们不属于任何人。就像草地上的花朵一样，不属于任何人。
 
-我自己也经历了从猥琐男到“审美者”的这一转变。在清华和 Cornell 的时候美女特别的少，所以好不容易看到一个美女就痴迷的不行，还给人家起一些很特别的名字，比如“火星mm”（当然，火星mm现在在我心目中仍然是很美的，虽然她已经当妈妈了）。我知道清华的学弟们最近又制造了像“奶茶妹妹”一类的绰号，那都是跟我学的。这种美女能出名的地方，其实都是美女缺乏的地方。美女如云的地方的美女是不会出名的，你能给天上的云朵起名字吗？直到找了一个美女做女朋友，进了美女众多的印第安纳大学，我才发现自己懂得了欣赏女性的美而不动“邪念”，可以眉目传情而不用深度迷恋了（嘿，我是金牛座的）。也许我这种人很适合去学习人体艺术吧？
+我自己也经历了从猥琐男到“审美者”的这一转变。在清华和 Cornell 的时候美女特别的少，所以好不容易看到一个美女就痴迷的不行，还给人家起一些很特别的名字，比如“火星mm”（当然，火星mm现在在我心目中仍然是很美的，虽然她已经当妈妈了）。我知道清华的学弟们最近又制造了像“奶茶妹妹”一类的绰号，那都是跟我学的。这种美女能出名的地方，其实都是美女缺乏的地方。美女如云的地方的美女是不会出名的，你能给天上的云朵起名字吗？直到找了一个美女做女朋友，进了美女众多的印第安纳大学，我才发现自己懂得了欣赏女性的美而不动“邪念”，可以眉目传情而不用深度迷恋了（嘿，我是金牛座的）。也许我这种人很适合去学习人体艺术吧？……不要误解了，我可是正常男人，所以“邪念”当然还是有的，只不过我可以控制它什么时候出现 :P
 
 美女知道自己是美女，而且知道附近美女很多，这样的美女才不会骄傲。由于男性朋友比较少，所以美女们常常结伴而行，期望遇到帅哥，却又怕遇到坏人。在傍晚的时候在我家附近，就会看到一群群的美女，大部分结伴而行，少数独自一人，飘向购物中心和各种小吃。结伴的美女胆子比单独的时候大很多，所以有可能从对面擦肩而过的时候，热情大胆地电你一眼，然后当你晕乎乎的时候，跟女伴回头笑你……这正好和旧金山湾区相反，湾区是帅哥太多，美女太少。只要是个女的，管她美不美呢，就有一群男人围着。可惜的是帅哥一般不能和帅哥成为“闺蜜”，除非他们是gay，所以旧金山的直男们才那么寂寞。总而言之，男人喜欢美女，美女也喜欢美女，所有人都喜欢美女。
 
@@ -40,9 +40,7 @@
 
 ### 气候
 
-由于湿度很大，成都夏天的气候非常的闷热。我喜欢开玩笑说，成都的美女皮肤那么好，就是因为成都夏天就跟蒸笼一样，所以美女们都像蒸饺一样白嫩 :P可是天气真的太闷热啦，一出门全身就变得黏糊糊的的，所以我现在已经没有什么愿望出门看美女了……
+由于湿度很大，成都夏天的气候非常的闷热。我喜欢开玩笑说，成都的美女皮肤那么好，就是因为成都夏天就跟蒸笼一样，所以美女们都像蒸饺一样白嫩 :P可是天气真的太闷热啦，一出门全身就变得黏糊糊的，所以我现在已经没有什么力气出门看美女了……
 
 更多的都不想写了，不要耽搁了在成都最后的浪漫时光。来了成都没多久，然后又要悄悄的走了，不带走一片云彩……
-
-(我发现很多人喜欢这篇文章，但我的 blog没有点赞功能。所以如果你喜欢的话，请到这篇文章的[简书版本](http://www.jianshu.com/p/caec0e3d47f4)上面点赞！)
 
