Update: 1. add 2 posts: a. google story; b. new life. 2. update the copyright statement by adding website link.

--- a/blog/2013-04-10-cornell.markdown
+++ b/blog/2013-04-10-cornell.markdown
@@ -2,7 +2,7 @@
 
 ## 我为什么离开 Cornell
 
-（王垠 yinwang.org 版权所有，未经许可，请勿转载）
+（王垠 [yinwang.org](http://www.yinwang.org) 版权所有，未经许可，请勿转载）
 
 很多人都知道，我曾经在 Cornell 博士就读，两年之后转学到了 Indiana 大学。几乎所有人，包括 Indiana大学的人都感觉奇怪，为什么会有人从 Cornell 这样的“牛校”转学到 Indiana。我曾经在之前的博文里提到 Cornell的情况，比如学生一上课就忙着抄笔记，作业压得喘不过气，等等。那些都是实际的情况，所以我没什么必要为我的“母校”说好话。
 
