--- a/blog/2014-08-14-modesty.markdown
+++ b/blog/2014-08-14-modesty.markdown
@@ -2,7 +2,7 @@
 
 ## 谦虚不是一种美德
 
-（王垠 yinwang.org 版权所有，未经许可，请勿转载）
+（王垠 [yinwang.org](http://www.yinwang.org) 版权所有，未经许可，请勿转载）
 
 人们常说谦虚是一种美德，然而我发现其实并不是这样。
 
