--- a/blog/2013-03-04-braid.markdown
+++ b/blog/2013-03-04-braid.markdown
@@ -2,7 +2,7 @@
 
 ## Braid - 一个发人深思的游戏
 
-（王垠 yinwang.org 版权所有，未经许可，请勿转载）
+（王垠 [yinwang.org](http://www.yinwang.org) 版权所有，未经许可，请勿转载）
 
 ![](http://www.yinwang.org/images/braid1.png)
 
