--- a/blog/2013-06-17-work.markdown
+++ b/blog/2013-06-17-work.markdown
@@ -2,7 +2,7 @@
 
 ## 半年来的工作感受
 
-（王垠 yinwang.org 版权所有，未经许可，请勿转载）
+（王垠 [yinwang.org](http://www.yinwang.org) 版权所有，未经许可，请勿转载）
 
 好久没有写博客，一方面因为工作太忙，另一方面是因为没有发现什么好写的。可是后来发现没什么好写的原因其实也是因为工作太忙了。忙得不正常，所以没有很多时间和精力来研究和欣赏自己喜欢的东西了。
 
