--- a/blog/2014-07-17-rest.markdown
+++ b/blog/2014-07-17-rest.markdown
@@ -2,7 +2,7 @@
 
 ## 休息，休息一会儿
 
-（王垠 yinwang.org 版权所有，未经许可，请勿转载）
+（王垠 [yinwang.org](http://www.yinwang.org) 版权所有，未经许可，请勿转载）
 
 ![](http://www.yinwang.org/images/yixiu.jpg)
 
