Update to the latest on 2015-08-13, update 1 post.

--- a/blog/2015-07-04-math.markdown
+++ b/blog/2015-07-04-math.markdown
@@ -16,7 +16,7 @@
 
 这并不是危言耸听。如果你深入研究过程序语言的理论，就会发现其实数学家们使用的那些符号，只不过是一种非常糟糕的程序语言。数学的理论有些是有用的，然而数学家门用于描述这些理论所用的语言，却是纷繁复杂，缺乏一致性，可组合性（composability），简单性，可用性。这也就是为什么大部分人看到数学就头痛。这不是他们不够聪明，而是数学语言的“[设计](http://www.yinwang.org/blog-cn/2015/03/17/design)”有问题。人们学习数学的时候，其实只有少部分时间在思考它的精髓，而大部分时间是在折腾它的语法。
 
-举一个非常简单的例子。如果你说x-1表示x的-1次方（x的倒数），那么f-1表示什么？f的-1次方，f的倒数？别被数学老师们的教条和借口欺骗啦，他们总是告诉你：“你应该记住这些！” 可是你想过吗：“凭什么！” x-1表示x的-1次方，而f-1，明明是一模一样的形式，表示的却是函数f的反函数。一个是求幂，一个是反函数，风马不及，却写成一个样子。这样的语言设计混淆不堪，却喜欢以“约定俗成”作为借口。
+举一个非常简单的例子。如果你说cos2θ表示(cos θ)2，那么理所当然，cos-1θ就应该表示1/(cosθ)了？可它偏偏不是！别被数学老师们的教条和借口欺骗啦，他们总是告诉你：“你应该记住这些！” 可是你想过吗：“凭什么？” cos2θ表示(cos θ)2，而cos-1θ，明明是一模一样的形式，表示的却是arccosθ。一个是求幂，一个是调用反函数，风马不及，却写成一个样子。这样的语言设计混淆不堪，却喜欢以“约定俗成”作为借口。
 
 如果你再多看一些数学书，就会发现这只是数学语言几百年累积下来的糟粕的冰山一角。数学书里尽是各种上标下标，带括号的上标下标，x，y，z，a，b，c，f，g，h，各种扭来扭去的希腊字母，希伯来字母…… 斜体，黑体，花体，双影体，……用不同的字体来表示不同的“类型”。很多符号的含义，在不同的子领域里面都不一样。有些人上一门数学课，到最后还没明白那些符号是什么意思。
 
