Add 2 posts and update several ones.

--- a/blog/2016-04-13-pay-blog.markdown
+++ b/blog/2016-04-13-pay-blog.markdown
@@ -1,11 +1,11 @@
 ## 关于博文的自愿付费方式
 
-曾经有很多人跟我建议，给我的博文里面加上捐款的链接，这样我花费的时间可以得到一些回报。我一直很高尚的样子，不愿意为此收费。然而，根据经济学的原理，这是有害社会的 :P 经济的原理是这样，有价值的事物，应该在经济上受到相应的支持，这样好的东西才能受到鼓励，发扬光大，不好的东西才可能被人忘记。所以现在我决定，给我觉得价值比较大的文章加上大概的价格，这样喜欢文章的人可以自愿付费，当然也可以不付费。
+曾经有很多人跟我建议，给我的博文里面加上付款的链接，这样我花费的时间可以得到一些回报。我一直很高尚的样子，不愿意为此收费。然而，根据经济学的原理，这是有害社会的 :P 经济的原理是这样，有价值的事物，应该在经济上受到相应的支持，这样好的东西才能受到鼓励，发扬光大，不好的东西才可能被人忘记。
 
-现在我为之前写的《编程的智慧》给出一个建议零售价（MSRP），为$5美元。如果你喜欢这篇文章，觉得收获很大的话，可以通过paypal或者支付宝进行付费。你的支持将会鼓励我为社会贡献更多类似有益的信息，改良业界的风气和工作环境。谢谢你的支持！
+所以现在我决定，给我觉得价值比较大的文章加上大概的价格，这样喜欢文章的人可以自愿付费，当然也可以不付费。谢谢你的支持！
 
 【[PayPal付款链接](http://paypal.me/yinwang0/5)】
 
-支付宝二维码：
+支付宝二维码（收款人是我父亲的名字王文荣）：
 
-![](http://upload-images.jianshu.io/upload_images/68562-87cccd26dde8490a.JPG?imageMogr2/auto-orient/strip%7CimageView2/2/w/200)
+![](http://www.yinwang.org/images/alipay.jpg)
