Add the rencent new and updated posts.

--- a/blog/2016-11-09-trump.markdown
+++ b/blog/2016-11-09-trump.markdown
@@ -4,7 +4,7 @@
 
 凭直觉我就看出来，Trump 嘴里说的就是他心里想的，而不是按其他人给他写的稿子念的。没有煽情，没有说教。很明显，他不是政客出身，不是哈佛耶鲁毕业，不怎么会撒谎。他不缺钱不缺地位不缺女人，所以不会被各种贪得无厌的财团操纵。一开头我就觉得，这家伙是真想做一番事情的，而他的目的，是为了社会变得更好，人民更加幸福。
 
-美国总统这破工作，很多人都不想做，送给我都不要。成天明争暗斗的，说不定哪天就被暗杀了。可就有那么一个人，过着国王一样的奢华生活，住着宫殿一样的房子，被超级名模和选美小姐们围绕，他却忽然想要来收拾美国这烂摊子，住进监狱一样的白房子。这是什么样的精神？这是对现状实在看不下去了，忍无可忍，只好挺身而出的精神 :P
+美国总统这破工作，很多人都不想做，送给我都不要。成天明争暗斗的，说不定哪天就被暗杀了。可就有那么一个人，过着国王一样的奢华生活，住着宫殿一样的房子，被[超级名模](https://www.youtube.com/watch?v=4JxYuRHMW5o)和[选美小姐](https://youtu.be/-zGpcbWqGE0?t=610)们围绕，他却忽然想要来收拾美国这烂摊子，住进监狱一样戒备森严的白房子。这是什么样的精神？这是对现状实在看不下去了，忍无可忍，只好[挺身而出](https://www.youtube.com/watch?v=OCabT_O0YSM)的精神 :P
 
 很多人不喜欢他，可我看了他几段视频之后，就打心眼里欣赏这人。因为他说的就是他想的，率真可爱！在叙利亚难民问题，欧洲恐怖事件，San Bernardino 枪击大屠杀出现的时候，他的反应跟奥巴马希拉里之类的伪君子，是完全不一样的。他知道如何正确地保护本国人民，从来不试图表现得“政治正确”，不怕得罪人。
 
@@ -14,14 +14,16 @@
 
 希拉里，当然一看就是政客，他们全家都是政客。政客的本质，不会因为性别而有所不同。很多人因为希拉里是女的而选她，希望会有所不同，别做梦了。这种人只“信仰”那些可以让他赢得选举的东西，所以总是见风使舵。奥巴马是美国第一个黑人总统，他做了什么好事吗？他根本就不配做总统。第一个女总统，那又能怎样。看人要看他的本质，而不是性别，种族，年龄一类肤浅的表面特征。
 
-哈佛，耶鲁这样的大学，还有一些类似 Wellesley 的“精英学校”，就是职业撒谎者的训练营。培养出来的就是特别会说，嘴上一套，互相勾结的傀儡政客。这些学校的所谓“教育”，也就是美国沦落到今天的地步的部分原因。美国的政界，大学和公司，充满了各种各样，能说会道的政客，全靠嘴皮子干活。什么口号能让自己升官，就喊什么口号。很多中国人还在继续膜拜这些“世界一流大学”，做梦都想把孩子送去这种学校。醒醒吧！
+如果你想了解希拉里的本质，请参考[泄露出来的民主党机密 email](https://view.inews.qq.com/a/20160725A015E000)。据我亲自上 WikiLeaks 搜索，发现这些 email 全都存在并且内容属实。希拉里团队为了抹黑 Trump，制造虚假广告，在社交媒体散步负面谣言抹黑 Trump，操纵 NBC 和华盛顿邮报等媒体，而且对同为民主党的 Sanders 猛下黑手。Sanders 和 Trump 都维护人民权益，而希拉里代表的是黑暗的压迫阶级。当然，她的幕后指使者们不能让 Sanders 和 Trump 上台。
 
-我不能说我是 Trump 的支持者，但随着对他了解的增加，我越来越觉得我们是同类。我觉得他很可能就是美国命运的转折点，至少是转折的开始。也许美国就是不可救药的国家，但这总比放任它不管好。选希拉里一定是错的，她跟奥巴马和其他政客不会有什么不同。他们只会空喊口号，拉拢各方面的选票，最后什么事都不会做！
+奥巴马毕业于哈佛，希拉里毕业于耶鲁。哈佛耶鲁这样的大学，还有一些类似 Wellesley 的“精英学校”，就是职业撒谎者的摇篮。培养出来的就是特别会说，嘴上一套，互相勾结的傀儡政客。这些学校的所谓“教育”，也就是美国沦落到今天的地步的重要原因。美国的政界，大学和公司，充满了各种各样，能说会道的政客，全靠嘴皮子干活。什么口号能让自己升官，就喊什么口号。很多中国人还在继续膜拜这些“世界一流大学”，做梦都想把孩子送去这种学校。醒醒吧！
 
-很多人讨厌 Trump 都是听了其他人歪曲的言论，不假思索就断定他是坏人。Trump 的敌人，是那些为富不仁，贪得无厌，危害社会的人。这些人为了维护他们不应有的暴利，当然要花费巨额的资金，操纵各种媒体来歪曲和污蔑他，把美国大选搞成一出闹剧。所以你就在网上看到有人断章取义，说 Trump 是个疯子，Trump 是种族主义者，Trump 性别歧视…… 但你根本不知道他具体是怎么说的，他是在什么样的情况下说的。
+我不能说我是 Trump 的支持者，但随着对他了解的增加，我越来越觉得我们是同类。他看明白了美国存在的严重问题，而且他想到了解决的方案。我觉得他很可能就是美国命运的转折点，至少是转折的开始。也许美国就是不可救药的国家，但这总比放任它不管好。选希拉里一定是错的，她跟奥巴马和其他政客不会有什么不同。他们只会空喊口号，拉拢各方面的选票，最后什么事都不会做，甚至让事情变得更糟。
 
-我看了一些他有争议的言论，包括那些关于穆斯林问题的，回去找到上下文，连起来发现他说的其实一点都没错。比如在枪击屠杀发生之后，他说：“我们不要让穆斯林进入美国，直到我们搞清楚这是怎么回事！” 人家只是说那个危险情况下暂时的措施，并没有说永久不准穆斯林进入美国，结果各大媒体把后半句“直到我们搞清楚这是怎么回事”剪掉，去掉时间限制成为永久性的断言，借此歪曲 Trump 的原话，让他成为穆斯林的敌人。然后奥巴马，希拉里就出来批判 Trump，跟穆斯林说好话，装好人，要“团结”…… 你们这都看不出来吗？
+很多人讨厌 Trump 都是听了其他人歪曲的言论，不假思索就断定他是坏人。Trump 的敌人，是那些为富不仁，贪得无厌，危害社会的人。这些人为了维护他们不应有的暴利，当然要花费巨额的资金，操纵各种媒体来歪曲和污蔑 Trump，把美国大选搞成一出闹剧。所以你就在网上看到有人断章取义，说 Trump 是个疯子，Trump 是种族主义者，Trump 性别歧视…… 但你根本不知道他具体是怎么说的，他是在什么样的情况下说的。如果你仔细翻看民主党的 email，会发现这些很多都是他们一手抹黑的。
 
-所以为了全面的了解一个人的为人，我建议你们直接看看他说了什么，而不要听别人的传言。我建议大家看一下这个[视屏](https://www.youtube.com/watch?v=OCabT_O0YSM)和[文章](http://cj.sina.com.cn/article/detail/2949462582/98422)。看完之后也许你会发现，Trump 是真正关爱社会的人，他想解决美国的社会问题，已经想了 35 年，才走出竞选总统这一步。35年，也就是他的半个人生了。他不像其它政客出身的候选人，有着各种不可告人的动机和幕后操纵者。
+我看了一些他有争议的言论，包括那些关于穆斯林问题的，回去找到上下文，连起来发现他说的其实一点都没错。具体的分析，请参考我的另一篇[文章](http://www.yinwang.org/blog-cn/2016/11/16/media-distortion)。
 
-在这个风和日丽的日子，美国迎来了第一个不是政客的总统，一线希望。Trump，收拾美国这烂摊子任重而道远，肯定有很多阻力和艰险。希望你不要辜负大家的希望，让美国人民过上幸福的日子！多保重！
+所以为了全面的了解一个人的为人，我建议你们直接看看他说了什么，而不要听别人的传言。我建议大家看一下这个[视频](https://www.youtube.com/watch?v=OCabT_O0YSM)和[文章](http://cj.sina.com.cn/article/detail/2949462582/98422)。看完之后也许你会发现，Trump 是真正关爱社会的人，他想解决美国的社会问题，已经想了 35 年，才走出竞选总统这一步。35年，也就是他的半个人生了。他不像其它政客出身的候选人，有着各种不可告人的动机和幕后操纵者。
+
+在这个风和日丽的日子，美国迎来了第一个不是政客的总统，一线希望。Trump，收拾美国这烂摊子任重而道远，面对强大的反人民势力，肯定有很多阻力和艰险。希望你不要辜负大家的希望，让美国人民过上幸福的日子！多保重！
